@@ -35,6 +35,8 @@
 #include "models/entrysortmodel.h"
 #include "models/modelmanager.h"
 #include "gui/detailedentryitemdelegate.h"
+#include "gui/ratingdelegate.h"
+#include "utils/string_utils.h"
 
 #include <KLocalizedString>
 #include <KSharedConfig>
@@ -77,6 +79,7 @@ DetailedListView::DetailedListView(QWidget* parent_) : GUI::TreeView(parent_)
   ModelManager::self()->setEntryModel(sortModel);
 
   connect(model(), SIGNAL(headerDataChanged(Qt::Orientation, int, int)), SLOT(updateHeaderMenu()));
+  connect(model(), SIGNAL(headerDataChanged(Qt::Orientation, int, int)), SLOT(updateColumnDelegates()));
   connect(model(), SIGNAL(columnsInserted(const QModelIndex&, int, int)), SLOT(hideNewColumn(const QModelIndex&, int, int)));
   connect(header(), SIGNAL(sectionCountChanged(int, int)), SLOT(updateHeaderMenu()));
 }
@@ -161,6 +164,7 @@ void DetailedListView::addCollection(Tellico::Data::CollPtr coll_) {
   }
 
   // because some of the fields got hidden...
+  updateColumnDelegates();
   updateHeaderMenu();
   checkHeader();
 
@@ -537,6 +541,25 @@ void DetailedListView::updateHeaderMenu() {
   connect(actHideAll, SIGNAL(triggered(bool)), this, SLOT(hideAllColumns()));
   QAction* actResize = m_headerMenu->addAction(QIcon::fromTheme(QLatin1String("zoom-fit-width")), i18n("Resize to Content"));
   connect(actResize, SIGNAL(triggered(bool)), this, SLOT(resizeColumnsToContents()));
+}
+
+void DetailedListView::updateColumnDelegates() {
+  for(int ncol = 0; ncol < header()->count(); ++ncol) {
+    Data::FieldPtr field = model()->headerData(ncol, Qt::Horizontal, FieldPtrRole).value<Data::FieldPtr>();
+    if(field && field->type() == Data::Field::Rating) {
+      /// if we're not using the overall delegate, delete the delegate since we're setting a new on
+      if(itemDelegateForColumn(ncol) != itemDelegate()) {
+        delete itemDelegateForColumn(ncol);
+      }
+      RatingDelegate* delegate = new RatingDelegate(this);
+      bool ok; // not used
+      delegate->setMaxRating(Tellico::toUInt(field->property(QLatin1String("maximum")), &ok));
+      setItemDelegateForColumn(ncol, delegate);
+    } else {
+      // reset column delegate to overall delegate
+      setItemDelegateForColumn(ncol, itemDelegate());
+    }
+  }
 }
 
 void DetailedListView::slotRefreshImages() {
